--- a/index.html
+++ b/index.html
@@ -115,9 +115,14 @@
         <div class="left-col">
             <div id="search" class="slider_element">
                 <form id = "search_form">
-                    <input id="search_inp" type="text" value>
-                    <!--<div class="placeholder-text">Search your product here <span>(e.g.:Silver diamond ring)</span></div>-->
-
+                      <div class="search-field">
+                            <label class="search-box">
+                                <input required type="text">
+                                <div class="placeholder-text">Search your product here
+                                    <span class="placeholder-text-exmpl">( e.g.:Silver diamond ring )</span>
+                                </div>
+                            </label>
+                        </div>
                     <button id="search_button" type="submit"><i class ="fa-flip-horizontal fa-solid fa-magnifying-glass fa-4x"></i></button>
                 </form>
             </div>
