--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="//db.onlinewebfonts.com/c/0a5b5c55b73f577ff4ac8c9c31b4c183?family=Aparajita" rel="stylesheet" type="text/css"/>
     <title>Title</title>
 </head>
 <body>
