--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="note red-note">20% OFF</div>
             </div>
             <div class="featured-products-image red">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/woman2.png" alt="image-2">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman2.png" alt="image-2">
                 <div class="product-inf">
                     <div class="product-description">
                         <div class="product-description-title">
@@ -295,7 +295,7 @@
                 </div>
             </div>
             <div class="featured-products-image blue">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/woman3.png" alt="image-3">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman3.png" alt="image-3">
                 <div class="product-inf">
                     <div class="product-description">
                         <div class="product-description-title">
@@ -325,7 +325,7 @@
                 <div class="note blue-note">New</div>
             </div>
             <div class="featured-products-image red">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/woman4.png" alt="image-4">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman4.png" alt="image-4">
                 <div class="product-inf">
                     <div class="product-description">
                         <div class="product-description-title">
