--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <div class="note red-note">20% OFF</div>
             </div>
             <div class="featured-products-image red">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman2.png" alt="image-2">
+                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/woman2.png" alt="image-2">
                 <div class="product-inf">
                     <div class="product-description">
                         <div class="product-description-title">
