--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="top-container">
             <div class="logo_img">
                 <a href="#">
-                    <img src="/images/logo_no_copy.png" alt="Logo" title="gift shop">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/logo_no_copy.png" alt="Logo" title="gift shop">
                     <div class="copyright_logo">
                         <span>copyright logo</span>
                     </div>
@@ -70,7 +70,7 @@
     <div class = "img-container slider">
         <div class="left-col">
             <div id="men" class="slider_element" title="Men's wear">
-                <img src="/images/men.png" alt="Men's wear">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/men.png" alt="Men's wear">
                 <div class="upper-text">
                     <h2 class="title">Men’s wear</h2>
                     <p class="text">Lorem Ipsum is simply dummy text of the<br>printing and typesetting industry. Lorem
@@ -83,7 +83,7 @@
         </div>
         <div class="right-col">
             <div id = "women" class="slider_element" title="Women's wear">
-                <img src="/images/women.png" alt="Women's wear">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/women.png" alt="Women's wear">
                 <div class="upper-text">
                     <h2 class="title">Women’s wear</h2>
                     <p class="text">Lorem Ipsum is simply dummy text<br>of the printing and typesetting
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div id = "kids" class="slider_element" title="Crafts">
-                <img src="/images/kids1.png" alt="Baby shop">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/kids1.png" alt="Baby shop">
                 <div class="upper-layer" title="Kids"></div>
                 <div class="buttons-baby-shop">
                     <div class="buttons-text"  title="Baby shop">
@@ -128,7 +128,7 @@
                 </form>
             </div>
             <div id ="crafts" class="slider_element" title="Crafts">
-                <img src="/images/crafts.png" alt="Crafts">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/crafts.png" alt="Crafts">
                 <div class="buttons-crafts">
                     <div class="buttons-text"  title="Crafts">
                         Crafts
@@ -150,7 +150,7 @@
         </div>
         <div class="right-col">
             <div id="jewelry" class="slider_element" title="Jewelry">
-                <img src="/images/jewelry.png" alt="Jewelry">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/jewelry.png" alt="Jewelry">
                 <div class="jewelry-title">
                     <div class="main-rectangle"></div>
                     <div class="triangle"></div>
@@ -177,22 +177,22 @@
             <div class="products-header-arrows">
                 <a>
                 <div class="new-products-header-arrow" title="Previous product">
-                    <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/left-arrow.png">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/left-arrow.png">
                 </div>
                 </a>
                 <a>
                 <div class="new-products-header-arrow" title="Next product">
-                    <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/right-arrow.png">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/right-arrow.png">
                 </div>
                 </a>
             </div>
         </div>
         <div class="new-products-images">
             <div class="new-products-image">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/new_prod.png" alt="new-prod1">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod.png" alt="new-prod1">
             </div>
             <div class="new-products-center-image">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/new_prod2.png" alt="new-prod2">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod2.png" alt="new-prod2">
                 <div class="buttons-baby-shop">
                     <div class="buttons-text"  title="Baby shop">
                         Baby Shop
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="new-products-image">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/new_prod3.png" alt="new-prod3">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod3.png" alt="new-prod3">
             </div>
         </div>
     </div>
@@ -224,12 +224,12 @@
             <div class="products-header-arrows">
                 <a>
                     <div class="featured-products-header-arrow" title="Previous product">
-                        <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/left-arrow.png">
+                        <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/left-arrow.png">
                     </div>
                 </a>
                 <a>
                     <div class="featured-products-header-arrow" title="Next product">
-                        <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/right-arrow.png">
+                        <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/right-arrow.png">
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                 <div class="note red-note">20% OFF</div>
             </div>
             <div class="featured-products-image red">
-                <img src="https://github.com/Elbarono/rpi_lab1_atm.github.io/blob/main/images/woman2.png" alt="image-2">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman2.png" alt="image-2">
                 <div class="product-inf">
                     <div class="product-description">
                         <div class="product-description-title">
