--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel ="stylesheet" href = "https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/stylesheet.css">
+    <link rel ="stylesheet" href = "stylesheet.css">
     <link rel ="stylesheet" href = "fontawesome-free-6.0.0-web/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
