--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
         <div class="new-products-images">
             <div class="new-products-image">
-                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod.png" alt="new-prod1">
+                <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod1.png" alt="new-prod1">
             </div>
             <div class="new-products-center-image">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod2.png" alt="new-prod2">
