--- a/index.html
+++ b/index.html
@@ -402,15 +402,15 @@
             <h2 class = "footer_tittle">SHOPPING WITH US</h2>
             <div class="footer-under-title">
             <ul class="footer_list">
-                <li><a>why shop with us?</a></li>
-                <li><a>how it works</a></li>
-                <li><a>delivery</a></li>
-                <li><a>returns</a></li>
-                <li><a>where's my order</a></li>
-                <li><a>contact & help</a></li>
-                <li><a>wedding list</a></li>
-                <li><a>wish lists</a></li>
-                <li><a>gift vouchers</a></li>
+                <li><a href="#">why shop with us?</a></li>
+                <li><a href="#">how it works</a></li>
+                <li><a href="#">delivery</a></li>
+                <li><a href="#">returns</a></li>
+                <li><a href="#">where's my order</a></li>
+                <li><a href="#">contact & help</a></li>
+                <li><a href="#">wedding list</a></li>
+                <li><a href="#">wish lists</a></li>
+                <li><a href="#">gift vouchers</a></li>
             </ul>
             </div>
         </div>
@@ -419,13 +419,13 @@
             <h2 class = "footer_tittle">ABOUT US</h2>
             <div class="footer-under-title">
             <ul class="footer_list">
-                <li><a>our story</a></li>
-                <li><a>customer contact</a></li>
-                <li><a>awards</a></li>
-                <li><a>press centre</a></li>
-                <li><a>work with us</a></li>
-                <li><a>terms & conditions</a></li>
-                <li><a>privacy & cookies</a></li>
+                <li><a href="#">our story</a></li>
+                <li><a href="#">customer contact</a></li>
+                <li><a href="#">awards</a></li>
+                <li><a href="#">press centre</a></li>
+                <li><a href="#">work with us</a></li>
+                <li><a href="#">terms & conditions</a></li>
+                <li><a href="#">privacy & cookies</a></li>
             </ul>
             </div>
         </div>
@@ -434,10 +434,10 @@
             <h2 class = "footer_tittle">SELLING WITH US</h2>
             <div class="footer-under-title">
             <ul class="footer_list">
-                <li><a>why join?</a></li>
-                <li><a>faqs</a></li>
-                <li><a>apply to sell with us</a></li>
-                <li><a>affiliates</a></li>
+                <li><a href="#">why join?</a></li>
+                <li><a href="#">faqs</a></li>
+                <li><a href="#">apply to sell with us</a></li>
+                <li><a href="#">affiliates</a></li>
             </ul>
             </div>
         </div>
