--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="triangle"></div>
                     <div class="rectangle">
                         <div class="ellipse"></div>
-                        <img src="/images/right_arrow_pink.png">
+                        <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/right_arrow_pink.png">
                     </div>
                 </div>
                 <div class="jewelry-name">JEWELRY</div>
