--- a/index.html
+++ b/index.html
@@ -155,8 +155,9 @@
                     <div class="main-rectangle"></div>
                     <div class="triangle"></div>
                     <div class="rectangle">
-                        <div class="ellipse"></div>
-                        <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/right_arrow_pink.png">
+                        <div class="ellipse">
+                                <i class="fa-solid fa-angle-right"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="jewelry-name">JEWELRY</div>
