--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
             </div>
         </div>
         <div class="new-products-images">
-            <div class="new-products-image" title="New product 3">
+            <div class="new-products-image" title="New product 1">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod1.png" alt="new-prod1">
             </div>
-            <div class="new-products-center-image" title="New product 1">
+            <div class="new-products-center-image" title="New product 2">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod2.png" alt="new-prod2">
-                <div class="buttons-baby-shop">
+                <div class="buttons-baby-shop"  title="">
                     <div class="buttons-text"  title="Baby shop">
                         Baby Shop
                     </div>
@@ -211,7 +211,7 @@
                     </div>
                 </div>
             </div>
-            <div class="new-products-image" title="New product 2">
+            <div class="new-products-image" title="New product 3">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/new_prod3.png" alt="new-prod3">
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="featured-products-image red" title="Featured product 1">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman1.png" alt="image-1">
                 <div class="product-inf">
-                    <div class="product-description">
+                    <div class="product-description" title="">
                         <div class="product-description-title">
                             Product Title here
                         </div>
@@ -269,7 +269,7 @@
             <div class="featured-products-image red" title="Featured product 2">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman2.png" alt="image-2">
                 <div class="product-inf">
-                    <div class="product-description">
+                    <div class="product-description" title="">
                         <div class="product-description-title">
                             Product Title here
                         </div>
@@ -298,7 +298,7 @@
             <div class="featured-products-image blue" title="Featured product 3">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman3.png" alt="image-3">
                 <div class="product-inf">
-                    <div class="product-description">
+                    <div class="product-description" title="">
                         <div class="product-description-title">
                             Product Title here
                         </div>
@@ -328,7 +328,7 @@
             <div class="featured-products-image red" title="Featured product 4">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/woman4.png" alt="image-4">
                 <div class="product-inf">
-                    <div class="product-description">
+                    <div class="product-description" title="">
                         <div class="product-description-title">
                             Product Title here
                         </div>
