--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </p>
                 </div>
             </div>
-            <div id = "kids" class="slider_element" title="Crafts">
+            <div id = "kids" class="slider_element" title="Kids">
                 <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/kids1.png" alt="Baby shop">
                 <div class="upper-layer" title="Kids"></div>
                 <div class="buttons-baby-shop">
