--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
             <div class="products-header-arrows">
                 <a>
                 <div class="new-products-header-arrow" title="Previous product">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/left-arrow.png">
+                                <i class="fa-solid fa-angle-left"></i>
                 </div>
                 </a>
                 <a>
                 <div class="new-products-header-arrow" title="Next product">
-                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/right-arrow.png">
+                                <i class="fa-solid fa-angle-right"></i>
                 </div>
                 </a>
             </div>
@@ -225,12 +225,12 @@
             <div class="products-header-arrows">
                 <a>
                     <div class="featured-products-header-arrow" title="Previous product">
-                        <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/left-arrow.png">
+                                <i class="fa-solid fa-angle-left"></i>
                     </div>
                 </a>
                 <a>
                     <div class="featured-products-header-arrow" title="Next product">
-                        <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/right-arrow.png">
+                                <i class="fa-solid fa-angle-right"></i>
                     </div>
                 </a>
             </div>
