--- a/index.html
+++ b/index.html
@@ -358,12 +358,15 @@
         </div>
    
     <!--Часть Тани конец-->
-    
+
+    <!--Часть Максима начало-->
+
 <div class="who_we_are">
     <div class="who_we_are_header">
         <div class="who_we_are_header_text">
             Who We Are
         </div>
+        <div class="line"></div>
     </div>
     <div class="who_we_are_text">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -378,22 +381,54 @@
 <div class="last_menu">
     <div class="options">
         <div class="chose_products_option">
-            <img src="" alt="chose_products">
-            Chose Products
+            <div class="chose_img">
+                <div class="firstimgblack">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blackfirst.png" alt="blackfirst">
+                </div>
+                <div class="lineimgblack">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blackline.png" alt="blackline">
+                </div>
+                <div class="secondimgblack">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blacksecond.png" alt="blacksecond">
+                </div>
+            </div>
+            <div class="size_text">Chose Product</div>
         </div>
         <div class="register_login_option">
-            <img src="" alt="register_login">
-            Register/Login
+            <div class="register_login_img">
+                <div class="firstimgblue">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/bluefirst.png" alt="bluefirst">
+                </div>
+                <div class="lineimgblue">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/blueline.png" alt="blueline">
+                </div>
+                <div class="secondimgblue">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/bluesecond.png" alt="bluesecond">
+                </div>
+            </div>
+            <div class="size_text">Register/ Login</div>
         </div>
         <div class="checkout_option">
-            <img src="" alt="checkout">
-            Checkout
+            <div class="checkout_img">
+                <div class="firstimgred">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/redfirst.png" alt="redfirst">
+                </div>
+                <div class="lineimgred">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/redline.png" alt="redline">
+                </div>
+                <div class="secondimgred">
+                    <img src="https://raw.githubusercontent.com/Elbarono/rpi_lab1_atm.github.io/main/images/redsecond.png" alt="redsecond">
+                </div>
+            </div>
+            <div class="size_text">Checkout</div>
         </div>
     </div>
     <div class="register_option">
-        Register Now
+        <button class="register_button">Register Now</button>
     </div>
 </div>
+    <!--Часть Максима конец-->
+
 <!-- начало второй части Ани-->
 <footer>
     <hr>
